# telehaskell

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  code.cabal  docker-compose.yml  hie.yaml
app/: Db.hs  Main.hs  Telegram.hs
