cabal-version:      2.4
name:               code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             leadpogrommer
maintainer:         ilyamerzlakov@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, HTTP, http-server, aeson, mongoDB, text, bytestring, containers, utf8-string, pcre-heavy, time
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: Telegram, Db
